save notes to database

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,15 @@
             margin-bottom: 23px;
             box-shadow: 3px 3px 20px lightslategrey;
         }
+
+        textarea {
+            resize: none;
+            width: 100%;
+        }
+
+        .card-block .row {
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
